@@ -1,7 +1,6 @@
 etc/frr/
 usr/bin/vtysh
-usr/include/frr/
-usr/lib/
+usr/lib/frr
 tools/frr usr/lib/frr
 usr/share/doc/frr/
 usr/share/man/man1/vtysh.1
