@@ -3,6 +3,7 @@ frr (4.0-0~bionic0+exo1) bionic; urgency=medium
   * Prepare port to Bionic.
   * d/rules: use --enable-cumulus as a configure option.
   * d/source: switch to 3.0 (quilt) format.
+  * d/install: do not ship development files, move lib to a private directory.
 
  -- Vincent Bernat <bernat@debian.org>  Fri, 11 May 2018 15:46:06 +0200
 
